2016-04-03 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Post-fit syst tables added (created while running the p option)
        * Post-fit uncertainty small fix (relevant with large pulls) - to check!

2016-03-15 Michele Pinamonti <michele.pinamonti@gmail.com>
        * NormFactor usage extended: now is possible to define them in the same way as the Systematics, allowing to have more than one of them for each sample, to have them fixed, to have norm factors affecting more samples, etc... 
        * Post-fit norm factor propagation to tables and sumary plots fixed
        * System for additional options (floats) added, for easy implementation of flags and options by users (see "Options:" in the README)
        
2016-03-03 Michele Pinamonti <michele.pinamonti@gmail.com>
        * MCstatThreshold default changed: now by default all gamma's are kept. To remove them completely (former default) use "MCstatThreshold: NONE" (reommended will be "MCstatThreshold: 0.01")
        * Fix for fit and tables with systematics defined in certain regions only
        * Fix plots when more samples with same title are declared (now summed together correctly)
        
2016-02-29 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Fixed bug when declaring overall syst in some regions only (by doing so, many changes in SummaryPlot and YieldTables - need some testers!!)
        * Nominal histo smoothing option added (unders "Sample", once can specify "  Smooth: TRUE")
        
2016-02-23 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
        * Adding functionality to run MINOS over a specified set of parameters (UseMinos in config)

2016-02-17 Loic Valery <lvalery@cern.ch>
        * Fix crash when computing significance and using validation regions

2016-02-15 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Added option to specify NuisanceParameter for each systematic -> allow correlated systematics
        * Added option SkipSmoothing for Regions